--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ certifi==2017.7.27.1
 chardet==3.0.4
 Django==1.11.5
 django-filter==1.0.4
+django-registration-redux==1.8
 idna==2.6
+mysqlclient==1.3.12
 pyserial==3.4
 pytz==2017.2
 requests==2.18.4
