--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ Django==1.11.5
 django-filter==1.0.4
 django-registration-redux==1.8
 idna==2.6
-mysqlclient==1.3.12
 oauthlib==2.0.6
 PyJWT==1.5.3
+PyMySQL==0.7.11
 pyserial==3.4
 python3-openid==3.1.0
 pytz==2017.2
