--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ certifi==2017.7.27.1
 chardet==3.0.4
 defusedxml==0.5.0
 Django==1.11.5
+django-crispy-forms==1.7.0
 django-filter==1.0.4
 django-registration-redux==1.8
 idna==2.6
 oauthlib==2.0.6
+pkg-resources==0.0.0
 PyJWT==1.5.3
 PyMySQL==0.7.11
 pyserial==3.4
