--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==1.11.5
 django-crispy-forms==1.7.0
 django-filter==1.0.4
 django-registration-redux==1.8
+gunicorn==19.7.1
 idna==2.6
 oauthlib==2.0.6
 PyJWT==1.5.3
@@ -18,3 +19,4 @@ six==1.11.0
 social-auth-app-django==2.0.0
 social-auth-core==1.5.0
 urllib3==1.22
+whitenoise==3.3.1
